# vhliboptimal

./: .gitignore  CMakeLists.txt  README.md  version.h.in
docs/: footer.txt  header.txt
src/: vhliboptimal.cpp  vhliboptimal.hpp  vhliboptimalstructs.hpp
src/bitfield/: bitfield.cpp  bitfield.hpp
src/cmatrix/: bitfield.cpp  bitfield.hpp  cmatrix.cpp  cmatrix.hpp
src/figures/: vhliboptimalfig.cpp  vhliboptimalfig.hpp
src/log/: vhliboptimallog.cpp  vhliboptimallog.hpp
